--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 
   <div id="main_image">
-    <img src="./assets/imcrazy2.png" alt="BLAAA" style="width:100%; height:100%;">
+    <img src="./assets/imcrazy2.png" alt="Picture of cartoon theatre with the name Chopticon written in big text" style="width:100%; height:100%;">
   </div>
 
   <div id="sep"></div>
@@ -48,7 +48,7 @@
 
     <div class="flex-rows">
       <div><img class="media" src="./assets/placeholder.jpg"
-        alt="Bravehouse logo, with Bravehouse written inside simple drawing of house"></div>
+        alt="Placeholder for introduction video"></div>
       <div class="texty">Chopticon's Theatre Department is composed of our Theatre Arts classes, Theatre Cohorts in the
         AVPA, Bravehouse Productions, and ITS Troupe 3443. We are an inclusive, welcoming family. We strive to be the
         best students, artists, and people we can be. Through rigorous coursework, extensive workshops, and exciting
@@ -63,7 +63,7 @@
 
     <div class="flex-rows">
       <div><img class="media" src="./assets/poster.png"
-          alt="Bravehouse logo, with Bravehouse written inside simple drawing of house"></div>
+          alt="Poster for upcoming show 'As you Like it'.Performances October 27-29th as 6pm."></div>
       <div class="texty">As You Like It follows its heroine Rosalind as she flees persecution in her uncle's court,
         accompanied by her cousin Celia to find safety and, eventually, love, in the Forest of Arden. In the forest,
         they encounter a variety of memorable characters, notably the melancholy traveller Jaques, who speaks many of
@@ -83,12 +83,12 @@
         81010 and for ITS: Text @its3443 to 81010. Additionally, follow us on Twitter @ChopTheatre and Instagram
         @bravehouseCHS. Additional links below!</div>
       <div><img class="media" src="./assets/mask.png"
-          alt="Bravehouse logo, with Bravehouse written inside simple drawing of house"></div>
+          alt="Black and red theatre masks, one smiling one frowning"></div>
     </div>
   </div>
 
   <div id="bottom_full">
-    <div><img class="i_con" src="./assets/information-outline.svg"></div>
+    <div><img class="i_con" src="./assets/information-outline.svg" alt="Information I Logo"></div>
     <div id="bottom">
       <ul class="bottom_links">
         <li><a href="#no_link">Accessibility</a></li>
@@ -98,9 +98,9 @@
       </ul>
     </div>
     <div id="media_links">
-      <div><img class="i_con" src="./assets/Facebook-logo.png"></div>
-      <div><img class="i_con" src="./assets/twitter.png"></div>
-      <div><img class="i_con" src="./assets/Instagram.webp"></div>
+      <div><img class="i_con" src="./assets/Facebook-logo.png" alt="Facebook Logo"></div>
+      <div><img class="i_con" src="./assets/twitter.png" alt="Twitter Logo" ></div>
+      <div><img class="i_con" src="./assets/Instagram.webp " alt="Instagram Logo"></div>
     </div>
   </div>
 
