--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
 
   <div id="bottom_full">
-    <div><img class="i_con" src="./assets/information-outline.svg" alt="Information I Logo"></div>
+    <div class="i_cont"><img class="i_con" src="./assets/information-outline.svg" alt="Information I Logo"></div>
     <div id="bottom">
       <ul class="bottom_links">
         <li><a href="#no_link">Accessibility</a></li>
@@ -98,9 +98,9 @@
       </ul>
     </div>
     <div id="media_links">
-      <div><img class="i_con" src="./assets/Facebook-logo.png" alt="Facebook Logo"></div>
-      <div><img class="i_con" src="./assets/twitter.png" alt="Twitter Logo" ></div>
-      <div><img class="i_con" src="./assets/Instagram.webp " alt="Instagram Logo"></div>
+      <div class="i_cont"><img class="i_con" src="./assets/twitter.png" alt="Twitter Logo" ></div>
+      <div class="i_cont"><img class="i_con" src="./assets/Facebook-logo.png" alt="Facebook Logo"></div>
+      <div class="i_cont"><img class="i_con" src="./assets/Instagram.webp " alt="Instagram Logo"></div>
     </div>
   </div>
 
